# cloud-hypervisor

./: .gitmodules  Cargo.toml
acpi_tables/src/: aml.rs  lib.rs  sdt.rs
arch/src/aarch64/: layout.rs
arch/src/x86_64/: layout.rs
devices/: Cargo.toml
devices/src/: acpi.rs  lib.rs  tpm_tis.rs
src/: main.rs
tpm2/: Cargo.toml
tpm2-sys/: Cargo.toml  build.rs
tpm2-sys/src/: lib.rs
tpm2/src/: lib.rs
vmm/: Cargo.toml
vmm/src/: acpi.rs  cpu.rs  device_manager.rs  memory_manager.rs  vm.rs
vtpm/: Cargo.toml
vtpm/src/: char.rs  char_socket.rs  char_test.rs  chario.rs  lib.rs  tpm.rs  tpm_backend.rs  tpm_ioctl.rs
vtpm/src/unused/: tpm.rs
