[package]
name = "vtpm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
virtio-devices = { path = "../virtio-devices" }
tpm2 = { path = "../tpm2"}
filedescriptor = "0.8.0"
nix = "0.22.0"
libc = "0.2.98"
log = "0.4.14"
